--- a/api/templates/result.html
+++ b/api/templates/result.html
@@ -4,22 +4,45 @@
     <title>替换后的JSON内容</title>
     <style>
         body {
-            font-size: 9pt;
+            font-family: Arial, sans-serif;
+            font-size: 14px;
+            line-height: 1.6;
             background-color: #f2f2f2; /* 灰色背景 */
+            margin: 20px;
         }
         pre {
             white-space: pre-wrap;
+            background-color: #fff;
+            padding: 10px;
+            border-radius: 4px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
         #jsonData {
             display: none;
         }
         #decodedJsonData {
             display: block;
+            font-size: 9pt; /* Set the font size to 9pt */
         }
         /* 添加黄色背景样式 */
         p {
-            background-color: yellow;
-            padding: 5px; /* 可根据需要调整内边距 */
+            background-color: #fff3cd;
+            padding: 10px; /* 可根据需要调整内边距 */
+            border-radius: 4px;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+
+        /* Center align the h1 element */
+        h1 {
+            text-align: center;
+            color: #007bff;
+            margin-bottom: 30px;
         }
     </style>
     <script>
