--- a/api/templates/form.html
+++ b/api/templates/form.html
@@ -87,7 +87,7 @@
 
     <div class="description">
         <p>    Real    </p>
-        <p>本网站用户将源阅读的书源转换为IOS 源阅读的书源</p>
+        <p>本网站用于将源阅读的书源转换为IOS源阅读APP的书源</p>
         <ul class="link-list">
             
             <li>源仓库：<a href="https://www.yckceo.com/yuedu/shuyuan/index.html">https://www.yckceo.com/yuedu/shuyuan/index.html</a></li>
